--- a/src/scss/TerminalText.scss
+++ b/src/scss/TerminalText.scss
@@ -3,7 +3,6 @@
 p {
   color: white;
   margin-left: 8px;
-  margin-bottom: 6px;
   font-family: 'Source Code Pro', monospace;
 }
 
@@ -14,7 +13,6 @@ p {
   overflow: hidden;
   height: 15px;
   width: 100%;
-  height: 100%;
 
   p {
     font-size: 12px;
@@ -31,28 +29,41 @@ p {
   overflow: hidden;
   height: 30px;
   width: 100%;
-  height: 100%;
 
   p {
     font-size: 12px;
+    margin-bottom: 0;
   }
 
   @include command-scroll__with-br(0, 30px);
 }
 
 .input-line {
+  display: -webkit-flex;
   display: flex;
+
+  -webkit-flex-direction: row;
   flex-direction: row;
+
+  -webkit-justify-content: flex-start;
   justify-content: flex-start;
   width: 100%;
-  height: 100%;
+  overflow: hidden;
+  height: 27px;
+  animation: command-line 1ms backwards;
+
+  @keyframes command-line {
+    from { height: 0; }
+    to { height: 27px; }
+  }
+
 
   .input-prompt {
     color: white;
     white-space: nowrap;
     @include animation-name(command-prompt);
     @include animation-fill-mode(backwards);
-    @include animation-delay(1ms);
+    //@include animation-delay(1ms);
 
     p {
       font-weight: 900;
@@ -67,6 +78,9 @@ p {
     overflow: hidden;
     white-space: nowrap;
     width: 100%;
+    -webkit-animation:
+            command-typewriter 1.5s backwards,
+            command-typewriter-height 1ms backwards;
     animation:
       command-typewriter 1.5s backwards,
       command-typewriter-height 1ms backwards;
@@ -86,12 +100,12 @@ p {
   overflow: hidden;
   white-space: nowrap;
   width: 100%;
-  height: 100%;
   @include animation(command-prompt-final, 1ms, backwards);
 
   p {
     font-weight: 900;
     font-size: 14px;
+    margin-bottom: 0;
   }
 
   @include command-prompt-final;
@@ -156,27 +170,28 @@ p {
   }
 
   .output-command {
-    //height: 26px;
+    height: 22px;
 
     p {
       font-size: 16px;
+      margin-bottom: 0;
     }
 
     @include command-scroll(0, 22px);
   }
 
   .output-command__with-br {
-    //height: 26px;
+    height: 40px;
 
     p {
       font-size: 16px;
     }
 
-    @include command-scroll__with-br(0, 36px);
+    @include command-scroll__with-br(0, 40px);
   }
 
   .input-prompt-final {
-    //height: 26px;
+    height: 26px;
     p {
       font-size: 18px;
     }
